Fix uneven text padding.

--- a/src/assets/flow.css
+++ b/src/assets/flow.css
@@ -21,5 +21,5 @@
   background: var(--color-border);
   border-radius: 5px;
   font-style: italic;
-  padding: 2px 5px 4px 5px;
+  padding: 3px 5px;
 }
